SWitching to real certificate to sign tokens

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "IdSrv4Settings": {
+    "TokenSigningCertificateThumbPrint": "0BDC68C2D3B5A1C4EFACA8A9E610AA66F93C948A",
+    "signing-certificate.password": "abc123"
   }
 }
